@@ -169,7 +169,7 @@ Object vectorTolistEx(Object args);
 Object setSourceInfoDEx(Object args);
 Object callProcessEx(Object args);
 Object internalgetClosureNameEx(Object args);
-Object appendDEx(Object args);
+Object appendEx(Object args);
 int mod(int x, int y);
 int div(int x, int y);
 }; // namespace scheme
